refactor: to new yaml api